esl_msa: Changed function prototype of esl_msa_MinimGaps() to include a <consider_rf> flag that tells the function whether or not to effectively consider the msa->rf as an additional sequence so that if <consider_rf>==TRUE no nongap RF columns are removed.
esl-reformat:
Added --keeprf option to be used only in combination with --mingap,
specifying that all nongap RF columns be kept. This is useful when
removing gaps from an alignment that will later be merged based on RF
using esl-alimerge. Updated esl-reformat man page.


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@529 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/esl-reformat.man
+++ b/miniapps/esl-reformat.man
@@ -155,6 +155,16 @@ characters, minimizing the overall length of the alignment.
 sequences from a larger alignment.)
 
 .TP
+.B --keeprf
+When used in combination with
+.B --mingap,
+never remove a column that is not a gap in the reference (#=GC RF) 
+annotation, even if the column contains 100% gap characters in 
+all aligned sequences. By default with
+.B --mingap,
+nongap RF columns that are 100% gaps in all sequences are removed.
+
+.TP
 .B --nogap
 Remove any aligned columns that contain any gap symbols
 at all. Useful as a prelude to phylogenetic analyses, where
