--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -392,6 +392,8 @@
 \section{Stockholm format for multiple sequence alignments}
 \input{format_stockholm.tex}
 
+\section{A2M format for multiple sequence alignments}
+\input{format_a2m.tex}
 
 
 \newpage
