Added A2M format documentation.
Fixed a number of small typos in structured function headers that were
preventing documentation from building. (EPN has made fixes in the
trunk that are likely to conflict with these changes in the H3 release
branch; I'll deal with that in a sec.)

A2M output (esl_msa: write_a2m()) was adding a few superfluous
newlines, when an output buffer had no valid characters (bpos=0); fixed. 



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/branches/hmmer@561 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/3.0/documentation/main.tex
+++ b/3.0/documentation/main.tex
@@ -392,6 +392,8 @@
 \section{Stockholm format for multiple sequence alignments}
 \input{format_stockholm.tex}
 
+\section{A2M format for multiple sequence alignments}
+\input{format_a2m.tex}
 
 
 \newpage
