Updated the easel documentation.  Updated a section in the sqio documentation on adding a new parser.  Also added a breif description of the NCBI BLAST database format.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@570 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -402,6 +402,11 @@
 
 
 \newpage
+\section{NCBI BLAST database foramt}
+\input{format_ncbi.tex}
+
+
+\newpage
 \chapter{Developer's guide}
 \input{codestyle}
 
